[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "5 different brain games within one project"
authors = ["Vladislav25 <vladkhleborodov@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"},]
repository = "https://github.com/CyberWarrior91/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
sympy = "^1.11.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.even:main"
brain-calc = "brain_games.scripts.calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
